--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,17 @@ cycler==0.10.0
 joblib==0.13.2
 kiwisolver==1.1.0
 matplotlib==3.1.0
-pandas==0.24.2
-Pillow==6.0.0
+numpy==1.18.5
+pandas==1.0.5
+opencv_python==4.4.0.44
+Pillow==9.3.0
+preprocessing==0.1.13
 pyparsing==2.4.0
-python-dateutil==2.8.0
 pytz==2019.1
-scikit-learn==0.21.2
+scikit_learn==1.2.0
 scipy==1.3.0
 seaborn==0.9.0
 six==1.12.0
+torch==1.8.0
+torchsample==0.1.3
+torchvision==0.7.0
